--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.2.14",
     "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.2.13",
-    "@angular/compiler": "~11.2.13",
     "@angular/core": "~11.2.13",
     "@angular/fire": "^6.1.5",
     "@angular/forms": "~11.2.13",
@@ -55,7 +55,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.12",
-    "@angular/cli": "~11.2.12",
+    "@angular/cli": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
     "@angular/compiler-cli": "~11.2.13",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
