--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node serveur.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -34,6 +34,7 @@
     "angular-material-data-grid": "^0.2.3",
     "bootstrap": "^4.6.0",
     "chart.js": "^3.5.0",
+    "express": "^4.17.1",
     "firebase": "^8.9.0",
     "font-awesome": "^4.7.0",
     "highcharts": "^9.1.2",
@@ -48,9 +49,11 @@
     "ngx-pagination": "^5.1.1",
     "ngx-print": "^1.2.1",
     "ngx-toastr": "^14.0.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.0.18",
     "tslib": "^2.0.0",
+    "typescript": "~4.1.5",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
@@ -72,5 +75,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
+  },
+  "engines": {
+    "node": "14.15.4",
+    "npm": "6.14.10"
   }
 }
